Remove z-index issues with sliders

--- a/packages/themes/src/classic/atoms/slider.scss
+++ b/packages/themes/src/classic/atoms/slider.scss
@@ -8,7 +8,6 @@
     & > .__content {
         display: flex;
         position: relative;
-        z-index: 1;
 
         & > .__label,
         & > .__value {
